# TP2022-C-CPP-Homework

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  install_linters.sh
.github/workflows/: ci.yml
benchmark/: benchmark  run_benchmark.sh
benchmark/generator/: generator  generator.cpp
benchmark/scripts/: build.sh  clear.sh
benchmark/src/: benchmark.cpp
examples/: ex1.txt
lib/functions/: CMakeLists.txt
lib/functions/include/: functions.h
lib/functions/src/: functions.c
lib/functions/tests/: CMakeLists.txt  test_functions.cpp
lib/lib_restoraunt/: CMakeLists.txt
lib/lib_restoraunt/include/: lib_restotaunt.h
lib/lib_restoraunt/src/: lib_restoraunt.c
lib/restoraunt/: CMakeLists.txt
lib/restoraunt/include/: restoraunt.h
lib/restoraunt/src/: restoraunt.c
lib/restoraunt/tests/: CMakeLists.txt  test_restoraunt.cpp
lib/task/: CMakeLists.txt
lib/task/include/: task.h
lib/task/src/: task.c
lib/task/tests/: CMakeLists.txt  test_task.cpp
lib/temperature_analyzer_parallel/: CMakeLists.txt
lib/temperature_analyzer_parallel/include/: temperature_analyzer.h
lib/temperature_analyzer_parallel/src/: temperature_analyzer.c
lib/temperature_analyzer_parallel/tests/: test_temp_analyzer.cpp
lib/temperature_analyzer_serial/: CMakeLists.txt
lib/temperature_analyzer_serial/include/: temperature_analyzer.h
lib/temperature_analyzer_serial/src/: temperature_analyzer.c
lib/temperature_analyzer_serial/tests/: CMakeLists.txt  test_temp_analyzer.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.c
lib/utils/tests/: CMakeLists.txt  test_utils.cpp
linters/: install_linters.sh  run_linters.sh
src/: main.c
